<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyStuffIcaro</string>
    <string name="action_settings">Settings</string>
    <string name="login">Telefone</string>
    <string name="password">Senha</string>
    <string name="logo_desc">Our Logo ;)</string>
    <string name="loginBtn">Login</string>
    <string name="signUp">Cadastre-se agora!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">E-Mail</string>
    <string name="password_again">Senha (novamente)</string>
    <string name="cancel">Cancelar</string>
    <string name="signupBtn">Cadastrar</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="emprestei">Emprestei</string>
    <string name="meEmprestaram">Peguei Emprestado</string>
    <string name="newStuff">Novo Emprestimo</string>
    <string name="categoria">Categoria</string>
    <string name="title_activity_novo_emprestimo">NovoEmprestimoActivity</string>
    <string name="title_activity_categoria">CategoriaActivity</string>
    <string name="logout">Sair</string>
    <string name="back">Voltar</string>
    <string name="editCategory">Nova Categoria</string>
    <string name="title_activity_edit_category">EditCategoryActivity</string>
    <string name="newCategory">Nome Categoria</string>
    <string name="editCategoryText">Gravar</string>
    <string name="nomeObjeto">Nome do Objeto</string>
    <string name="contato">Contado</string>
    <string name="dataDevolucao">Data de Devolução</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="baixar">Baixar</string>
    <string name="img_foto_objeto">Foto do Objeto</string>

</resources>
