<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditCategoryActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="32dp"
        android:text="@string/newCategory"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/categoryBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/criaCategoriaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categoryBox"
        android:layout_below="@+id/categoryBox"
        android:layout_marginTop="30dp"
        android:text="@string/editCategoryText" />

    <Button
        android:id="@+id/voltaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/criaCategoriaBtn"
        android:layout_alignBottom="@+id/criaCategoriaBtn"
        android:layout_alignRight="@+id/categoryBox"
        android:text="@string/back" />

</RelativeLayout>
